[package]
name = "test-simple-api-policy-fgw"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name="test_simple_api_policy_fgw"
path="src/lib.rs"

[dependencies]
proxy-wasm = { git = "https://github.com/proxy-wasm/proxy-wasm-rust-sdk.git", tag = "v0.2.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
regex = "1.9.1"
base64 = "~0.2.0"
base64-url = "2.0.0"
chrono = { version = "0.4", features = ["serde"] }

[[example]]
name = "test"
path="examples/test.rs"

[profile.release]
opt-level = "z"
lto = "fat"
